// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KanbanColumn matches snapshot empty column 1`] = `
<View
  style={
    {
      "marginVertical": 10,
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 20,
        "fontWeight": "bold",
        "marginBottom": 10,
        "paddingHorizontal": 20,
      }
    }
  >
    Não Classificado
  </Text>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    data={[]}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`KanbanColumn matches snapshot with notas 1`] = `
<View
  style={
    {
      "marginVertical": 10,
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 20,
        "fontWeight": "bold",
        "marginBottom": 10,
        "paddingHorizontal": 20,
      }
    }
  >
    Não Classificado
  </Text>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    data={
      [
        {
          "classificacao_id": "1",
          "cnpj_emitente": "12.345.678/0001-99",
          "nome_emitente": "Empresa A",
          "numero": "NF-001",
          "parceiro": {
            "cnpj": "12.345.678/0001-99",
            "nome": "Empresa A",
            "uuid": "parceiro-1",
          },
          "uuid": "nota-1",
          "valor_total": 1000,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "borderRadius": 12,
                "elevation": 3,
                "marginHorizontal": 4,
                "marginVertical": 8,
                "overflow": "hidden",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 4,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Nota Fiscal: 
            NF-001
          </Text>
          <Text>
            Valor: 
            1000
          </Text>
          <Text>
            CNPJ: 
            12.345.678/0001-99
          </Text>
          <Text>
            Emitente: 
            Empresa A
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
